# dao-app

./: .gitignore  README.md  package.json
dao-backend/: .env.example  package.json  server.js
dao-backend/src/api/: near.client.js
dao-backend/src/config/: index.js
dao-backend/src/controllers/: proposal.controller.js
dao-backend/src/routes/: index.js  proposal.route.js
dao-backend/src/services/: proposal.service.js
dao-cli/: .env.example  package.json
dao-cli/src/: commands.js  config.js  index.js  near.client.js
dao-frontend/: .env.local.example  package.json
dao-frontend/src/components/: error.alert.js  header.js  success.alert.js  vote.button.js
dao-frontend/src/contexts/: alert.context.js  near.context.js
dao-frontend/src/hooks/: api.js
dao-frontend/src/pages/: _app.js  index.js
dao-frontend/src/pages/proposals/: [id].js
dao-frontend/src/styles/: globals.css
dao-frontend/src/utils/: near.config.js
dao-sc/: Cargo.toml  README.md
dao-sc/dao-contract/: Cargo.toml
dao-sc/dao-contract/src/: lib.rs
dao-sc/proposal-contract/: Cargo.toml
dao-sc/proposal-contract/src/: lib.rs  vote.rs
dao-sc/src/: lib.rs  proposal.rs  token.rs  vote.rs
dao-sc/tests/: integration_tests.rs
dao-sc/token-contract/: Cargo.toml
dao-sc/token-contract/src/: lib.rs
