[package]
name = "dao-wrapper"
version = "0.1.0"
authors = ["FabriG"]
edition = "2021"

[dev-dependencies]
anyhow = "1.0"
near-workspaces = { version = "0.10.0", features = ["unstable"] }
near-sdk = { version = "5.0.0", features = ["unit-testing"] }
tokio = { version = "1.14", features = ["full"] }
serde_json = "1"

[profile.release]
codegen-units = 1
# Tell `rustc` to optimize for small code size.
opt-level = "z"
lto = true
debug = false
panic = "abort"
# Opt into extra safety checks on arithmetic operations https://stackoverflow.com/a/64136471/249801
overflow-checks = true

