[package]
name = "token-contract"
description = "token-contract-for-DAO"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
borsh = "1.4.0"
near-contract-standards = "5.1.0"
near-sdk = { version = "5.1.0", features = ["legacy"] }


[dev-dependencies]
near-sdk = { version = "5.0.0", features = ["unit-testing"] }
near-workspaces = { version = "0.10.0", features = ["unstable"] }
tokio = { version = "1.12.0", features = ["full"] }
serde_json = "1"
